test/Fail/SafeFlagPrimTrustMe.agda
module SafeFlagPrimTrustMe where

open import Agda.Builtin.Equality
open import Agda.Builtin.TrustMe
